@@ -11,6 +11,7 @@ Version 1.1.1 to be released
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring and filtering/search support (Qiang)
 - Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
+- Chg: CFormElement::attributes is renamed to be CFormElement::htmlOptions (Qiang)
 - New: Added CActiveForm that performs model validations via AJAX (Qiang)
 
 Version 1.1.0 January 10, 2010
